crates/crochet_parser/src/snapshots/crochet_parser__tests__member_access-5.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"arr[0][1];\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..10,
                expr: Expr {
                    span: 0..9,
                    kind: Member(
                        Member {
                            obj: Expr {
                                span: 0..6,
                                kind: Member(
                                    Member {
                                        obj: Expr {
                                            span: 0..3,
                                            kind: Ident(
                                                Ident {
                                                    span: 0..3,
                                                    name: "arr",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        prop: Computed(
                                            ComputedPropName {
                                                span: 4..5,
                                                expr: Expr {
                                                    span: 4..5,
                                                    kind: Lit(
                                                        Num(
                                                            Num {
                                                                span: 4..5,
                                                                value: "0",
                                                            },
                                                        ),
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                    },
                                ),
                                inferred_type: None,
                            },
                            prop: Computed(
                                ComputedPropName {
                                    span: 7..8,
                                    expr: Expr {
                                        span: 7..8,
                                        kind: Lit(
                                            Num(
                                                Num {
                                                    span: 7..8,
                                                    value: "1",
                                                },
                                            ),
                                        ),
                                        inferred_type: None,
                                    },
                                },
                            ),
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
