crates/crochet_parser/src/snapshots/crochet_parser__tests__operations-12.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"-(a + b);\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..9,
                expr: Expr {
                    span: 0..8,
                    kind: UnaryExpr(
                        UnaryExpr {
                            op: Minus,
                            arg: Expr {
                                span: 2..7,
                                kind: BinaryExpr(
                                    BinaryExpr {
                                        op: Add,
                                        left: Expr {
                                            span: 2..3,
                                            kind: Ident(
                                                Ident {
                                                    span: 2..3,
                                                    name: "a",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        right: Expr {
                                            span: 6..7,
                                            kind: Ident(
                                                Ident {
                                                    span: 6..7,
                                                    name: "b",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ),
                                inferred_type: None,
                            },
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
