crates/crochet_parser/src/snapshots/crochet_parser__tests__rust_style_functions-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let bar = () => { let x = Math.random(); x; };\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..46,
                pattern: Pattern {
                    span: 4..7,
                    kind: Ident(
                        BindingIdent {
                            name: "bar",
                            mutable: false,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 10..45,
                        kind: Lambda(
                            Lambda {
                                params: [],
                                body: Expr {
                                    span: 18..40,
                                    kind: Let(
                                        Let {
                                            pattern: Some(
                                                Pattern {
                                                    span: 22..23,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "x",
                                                            mutable: false,
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                            ),
                                            type_ann: None,
                                            init: Expr {
                                                span: 26..39,
                                                kind: App(
                                                    App {
                                                        lam: Expr {
                                                            span: 26..37,
                                                            kind: Member(
                                                                Member {
                                                                    obj: Expr {
                                                                        span: 26..30,
                                                                        kind: Ident(
                                                                            Ident {
                                                                                span: 26..30,
                                                                                name: "Math",
                                                                            },
                                                                        ),
                                                                        inferred_type: None,
                                                                    },
                                                                    prop: Ident(
                                                                        Ident {
                                                                            span: 31..37,
                                                                            name: "random",
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                        args: [],
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                            body: Expr {
                                                span: 41..43,
                                                kind: Let(
                                                    Let {
                                                        pattern: None,
                                                        type_ann: None,
                                                        init: Expr {
                                                            span: 41..42,
                                                            kind: Ident(
                                                                Ident {
                                                                    span: 41..42,
                                                                    name: "x",
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                        body: Expr {
                                                            span: 0..0,
                                                            kind: Empty,
                                                            inferred_type: None,
                                                        },
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
