crates/crochet_parser/src/snapshots/crochet_parser__tests__strings-4.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"\\\"a \\\\u2212 b\\\";\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..13,
                expr: Expr {
                    span: 0..12,
                    kind: Lit(
                        Str(
                            Str {
                                span: 0..12,
                                value: "a − b",
                            },
                        ),
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
