crates/crochet_parser/src/snapshots/crochet_parser__tests__template_literals-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"`Hello, ${name}`\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..16,
                expr: Expr {
                    span: 0..16,
                    kind: TemplateLiteral(
                        TemplateLiteral {
                            exprs: [
                                Expr {
                                    span: 10..14,
                                    kind: Ident(
                                        Ident {
                                            span: 10..14,
                                            name: "name",
                                        },
                                    ),
                                    inferred_type: None,
                                },
                            ],
                            quasis: [
                                TemplateElem {
                                    span: 1..8,
                                    raw: Str(
                                        Str {
                                            span: 1..8,
                                            value: "Hello, ",
                                        },
                                    ),
                                    cooked: Str(
                                        Str {
                                            span: 1..8,
                                            value: "Hello, ",
                                        },
                                    ),
                                },
                                TemplateElem {
                                    span: 15..15,
                                    raw: Str(
                                        Str {
                                            span: 15..15,
                                            value: "",
                                        },
                                    ),
                                    cooked: Str(
                                        Str {
                                            span: 15..15,
                                            value: "",
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
