crates/crochet_parser/src/snapshots/crochet_parser__tests__template_literals-5.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"`foo ${`bar ${baz}`}`\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..21,
                expr: Expr {
                    span: 0..21,
                    kind: TemplateLiteral(
                        TemplateLiteral {
                            exprs: [
                                Expr {
                                    span: 7..19,
                                    kind: TemplateLiteral(
                                        TemplateLiteral {
                                            exprs: [
                                                Expr {
                                                    span: 14..17,
                                                    kind: Ident(
                                                        Ident {
                                                            span: 14..17,
                                                            name: "baz",
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                            ],
                                            quasis: [
                                                TemplateElem {
                                                    span: 8..12,
                                                    raw: Str(
                                                        Str {
                                                            span: 8..12,
                                                            value: "bar ",
                                                        },
                                                    ),
                                                    cooked: Str(
                                                        Str {
                                                            span: 8..12,
                                                            value: "bar ",
                                                        },
                                                    ),
                                                },
                                                TemplateElem {
                                                    span: 18..18,
                                                    raw: Str(
                                                        Str {
                                                            span: 18..18,
                                                            value: "",
                                                        },
                                                    ),
                                                    cooked: Str(
                                                        Str {
                                                            span: 18..18,
                                                            value: "",
                                                        },
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                    inferred_type: None,
                                },
                            ],
                            quasis: [
                                TemplateElem {
                                    span: 1..5,
                                    raw: Str(
                                        Str {
                                            span: 1..5,
                                            value: "foo ",
                                        },
                                    ),
                                    cooked: Str(
                                        Str {
                                            span: 1..5,
                                            value: "foo ",
                                        },
                                    ),
                                },
                                TemplateElem {
                                    span: 20..20,
                                    raw: Str(
                                        Str {
                                            span: 20..20,
                                            value: "",
                                        },
                                    ),
                                    cooked: Str(
                                        Str {
                                            span: 20..20,
                                            value: "",
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
