crates/crochet_parser/src/snapshots/crochet_parser__tests__template_literals-6.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"sql`SELECT * FROM ${table} WHERE id = ${id}`\")"
---
Program {
    body: [
        Expr {
            span: 0..44,
            expr: TaggedTemplateLiteral(
                TaggedTemplateLiteral {
                    span: 0..44,
                    tag: Ident {
                        span: 0..3,
                        name: "sql",
                    },
                    template: TemplateLiteral {
                        span: 0..44,
                        exprs: [
                            Ident(
                                Ident {
                                    span: 20..25,
                                    name: "table",
                                },
                            ),
                            Ident(
                                Ident {
                                    span: 40..42,
                                    name: "id",
                                },
                            ),
                        ],
                        quasis: [
                            TemplateElem {
                                span: 4..20,
                                raw: Str(
                                    Str {
                                        span: 4..20,
                                        value: "SELECT * FROM ",
                                    },
                                ),
                                cooked: Str(
                                    Str {
                                        span: 4..20,
                                        value: "SELECT * FROM ",
                                    },
                                ),
                            },
                            TemplateElem {
                                span: 26..40,
                                raw: Str(
                                    Str {
                                        span: 26..40,
                                        value: " WHERE id = ",
                                    },
                                ),
                                cooked: Str(
                                    Str {
                                        span: 26..40,
                                        value: " WHERE id = ",
                                    },
                                ),
                            },
                            TemplateElem {
                                span: 43..44,
                                raw: Str(
                                    Str {
                                        span: 43..44,
                                        value: "",
                                    },
                                ),
                                cooked: Str(
                                    Str {
                                        span: 43..44,
                                        value: "",
                                    },
                                ),
                            },
                        ],
                    },
                },
            ),
        },
    ],
}
